# Tlama-reader

./: .env.template  .gitignore  Makefile  README.md  config.py  database.py  email_template.html  excluded_game_urls.txt  main.py  pyproject.toml  website_caller.py
.github/workflows/: daily-run.yml  weekly-run.yml
integrations/: onesignal_caller.py
model/: board_game.py
templates/: deal_template.html
tests/: __init__.py  conftest.py  test_board_game.py  test_database.py  test_search.py
ui/: __init__.py  game_details.py  interface.py  main_window.py
utils/: __init__.py  blocklist.py  promo.py  search.py
