[project]
name = "tlama-caller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "onesignal-python-api @ git+https://github.com/onesignal/onesignal-python-api.git",
    "dotenv>=0.9.9"
]
